--- a/apps/e-commerce-front/src/app/components/sign-up-form/sign-up-form.component.html
+++ b/apps/e-commerce-front/src/app/components/sign-up-form/sign-up-form.component.html
@@ -8,6 +8,13 @@
       </div>
     </div>
     <div class="form-field">
+      <label for="phone">Phone</label>
+      <input type="text" formControlName="phone" id="phone" name="phone" required placeholder="Enter your phone">
+      <div class="field-erros" *ngIf="signUpForm.get('phone')?.invalid && (signUpForm.get('phone')?.dirty || signUpForm.get('phone')?.touched)">
+        <span class="error">Phone is required</span>
+      </div>
+    </div>
+    <div class="form-field">
       <label for="email">Email</label>
       <input type="email" formControlName="email" id="email" name="email" required placeholder="Enter your email">
       <div class="field-erros" *ngIf="signUpForm.get('email')?.invalid && (signUpForm.get('email')?.dirty || signUpForm.get('email')?.touched)">
